# Screenshot_wizard

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_PROMPT.txt  README.md  pyproject.toml  requirements.txt
config/: settings.yaml
src/: __init__.py  analyzer.py  config.py  file_manager.py  gui.py  main.py  pdf_converter.py  pdf_generator.py  watcher.py
tests/: __init__.py  test_analyzer.py  test_config.py  test_file_manager.py  test_gui.py  test_pdf_converter.py  test_pdf_generator.py  test_watcher.py
